Updated Features: Customized Launchscreeen, Custom App icon, Custom Annotation markers, Reloads Data after creating new Gem

--- a/HiddenGems/HiddenGems/Base.lproj/Main.storyboard
+++ b/HiddenGems/HiddenGems/Base.lproj/Main.storyboard
@@ -103,11 +103,13 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="yth-LW-XzR">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <gestureRecognizers/>
                                 <connections>
                                     <outlet property="delegate" destination="tju-rv-x6n" id="FqQ-C3-wAO"/>
+                                    <outletCollection property="gestureRecognizers" destination="gCR-u3-OiH" appends="YES" id="Fcu-Qz-nFk"/>
                                 </connections>
                             </mapView>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="toH-89-6uG">
+                            <searchBar contentMode="redraw" fixedFrame="YES" text="" translatesAutoresizingMaskIntoConstraints="NO" id="toH-89-6uG">
                                 <rect key="frame" x="0.0" y="88" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -143,6 +145,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="840-UQ-vcD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <pinchGestureRecognizer id="gCR-u3-OiH"/>
             </objects>
             <point key="canvasLocation" x="1360.8695652173915" y="66.964285714285708"/>
         </scene>
@@ -538,7 +541,6 @@
         <!--Navigation Controller-->
         <scene sceneID="cg8-KE-Voy">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="PvH-Nk-kbg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="M2l-ka-5zp" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Suh-46-gAF">
@@ -550,6 +552,7 @@
                         <segue destination="LUS-Vo-cdm" kind="relationship" relationship="rootViewController" id="R22-ew-VGc"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PvH-Nk-kbg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3719" y="-524"/>
         </scene>
